--- a/package.json
+++ b/package.json
@@ -111,12 +111,14 @@
     "lodash.debounce": "^4.0.8",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
+    "mammoth": "^1.11.0",
     "nanoid": "^5.1.5",
     "next": "15.5.4",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
     "platejs": "^49.2.21",
     "pptxgenjs": "^4.0.1",
     "prismjs": "^1.30.0",
