feat: 添加演示文稿编辑功能和PDF提取支持
主要更新：
- 添加双版本下载：演示版（纯净）和可编辑版（带编辑功能）
- 实现文本框宽度/高度调整功能
- 实现图片8个手柄自由调整（拉伸、压缩、移动）
- 添加图片替换功能（Base64编码）
- 集成PDF.js用于PDF文本提取
- 优化Reveal.js主题样式
- 添加富文本编辑工具栏
- 改进编辑模式用户体验

技术细节：
- 使用pdfjs-dist进行PDF文本提取
- 创建独立的presentation-editor.js编辑器脚本
- 优化图片调整手柄的位置计算逻辑
- 添加编辑状态管理和事件处理
- 支持文本框和图片的独立编辑模式

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@tavily/core": "^0.5.12",
     "@uploadthing/react": "^7.3.1",
     "ai": "^4.3.19",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -116,9 +117,11 @@
     "next": "15.5.4",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "ollama-ai-provider": "^1.2.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.296",
     "platejs": "^49.2.21",
     "pptxgenjs": "^4.0.1",
     "prismjs": "^1.30.0",
@@ -155,6 +158,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "together-ai": "^0.7.0",
+    "unsplash-js": "^7.0.20",
     "uploadthing": "^7.7.2",
     "use-file-picker": "^2.1.2",
     "vaul": "^1.1.2",
